--- a/town_hall_1/styles/c5_main.css
+++ b/town_hall_1/styles/c5_main.css
@@ -20,6 +20,9 @@ a:hover {
   font-style: italic;
 }
 /* the styles for the header */
+header {
+  border-bottom: 3px solid #931420;
+}
 header h2 {
   font-size: 175%;
   color: var(--global-color-1);
@@ -43,6 +46,8 @@ main {
 main h1 {
   font-size: 150%;
   padding: 0.3em 0;
+  border-bottom: 3px solid #931420;
+  border-top: 3px solid #931420;
 }
 main h2 {
   color: var(--global-color-1);
@@ -74,4 +79,6 @@ main li {
 footer p {
   text-align: center;
   padding: 1em 0;
+  background-color: #931420;
+  color: white;
 }
