--- a/town_hall_1/styles/c5_main.css
+++ b/town_hall_1/styles/c5_main.css
@@ -3,6 +3,13 @@
   --global-color-1: #800000;
 }
 
+/* reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 /* the styles for the elements */
 html {
   background-color: white;
@@ -22,19 +29,21 @@ a:hover {
 /* the styles for the header */
 header {
   border-bottom: 3px solid #931420;
+  padding-top: 1.5em;
+  padding-bottom: 2em;
 }
 header h2 {
   font-size: 175%;
   color: var(--global-color-1);
-  text-indent: 30px;
 }
 header h3 {
   font-size: 130%;
   font-style: italic;
-  text-indent: 30px;
 }
 header img {
   float: left;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 .shadow {
   text-shadow: 2px 2px 2px var(--global-color-1);
@@ -42,6 +51,7 @@ header img {
 /* the styles for the main content */
 main {
   clear: left;
+  padding: 0 30px;
 }
 main h1 {
   font-size: 150%;
