--- a/town_hall_1/styles/c5_main.css
+++ b/town_hall_1/styles/c5_main.css
@@ -13,6 +13,7 @@
 /* the styles for the elements */
 html {
   background-color: white;
+	font-size: 16px;
 }
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -31,6 +32,14 @@ header {
   border-bottom: 3px solid #931420;
   padding-top: 1.5em;
   padding-bottom: 2em;
+  background: linear-gradient(
+    30deg,
+    #f6bb73 0%,
+    #f6bb73 30%,
+    white 50%,
+    #f6bb73 80%,
+    #f6bb73 100%
+  );
 }
 header h2 {
   font-size: 175%;
